--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Azure.Common.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Azure.Common.nuspec
@@ -39,16 +39,16 @@ Supported Portable Library Platforms:
     </dependencies>
   </metadata>
   <files>
-    <file src="Common\**\*.cs" target="src\Common" />
-    <file src="Common\Properties\*.resx" target="src\Common\Properties" />
-    <file src="..\binaries\portable\Microsoft.Azure.Common.dll" target="lib\portable-net403+win+wpa81" />
-    <file src="..\binaries\portable\Microsoft.Azure.Common.pdb" target="lib\portable-net403+win+wpa81" />
-    <file src="..\binaries\portable\Microsoft.Azure.Common.xml" target="lib\portable-net403+win+wpa81" />
-    <file src="..\binaries\net45\Microsoft.Azure.Common.dll" target="lib\net45" />
-    <file src="..\binaries\net45\Microsoft.Azure.Common.pdb" target="lib\net45" />
-    <file src="..\binaries\net45\Microsoft.Azure.Common.xml" target="lib\net45" />
-    <file src="..\binaries\net40\Microsoft.Azure.Common.dll" target="lib\net40" />
-    <file src="..\binaries\net40\Microsoft.Azure.Common.pdb" target="lib\net40" />
-    <file src="..\binaries\net40\Microsoft.Azure.Common.xml" target="lib\net40" />
+    <file src="ClientRuntime.Azure\**\*.cs" target="src\Common" />
+    <file src="ClientRuntime.Azure\Properties\*.resx" target="src\Common\Properties" />
+    <file src="..\..\binaries\portable\Microsoft.Azure.Common.dll" target="lib\portable-net403+win+wpa81" />
+    <file src="..\..\binaries\portable\Microsoft.Azure.Common.pdb" target="lib\portable-net403+win+wpa81" />
+    <file src="..\..\binaries\portable\Microsoft.Azure.Common.xml" target="lib\portable-net403+win+wpa81" />
+    <file src="..\..\binaries\net45\Microsoft.Azure.Common.dll" target="lib\net45" />
+    <file src="..\..\binaries\net45\Microsoft.Azure.Common.pdb" target="lib\net45" />
+    <file src="..\..\binaries\net45\Microsoft.Azure.Common.xml" target="lib\net45" />
+    <file src="..\..\binaries\net40\Microsoft.Azure.Common.dll" target="lib\net40" />
+    <file src="..\..\binaries\net40\Microsoft.Azure.Common.pdb" target="lib\net40" />
+    <file src="..\..\binaries\net40\Microsoft.Azure.Common.xml" target="lib\net40" />
   </files>
 </package>
