--- a/ClientRuntimes/CSharp/ClientRuntime.Tests/ClientRuntime.Tests.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Tests/ClientRuntime.Tests.csproj
@@ -31,6 +31,7 @@
     <Compile Include="Fakes\RecordedDelegatingHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JsonSerializationTests.cs" />
+    <Compile Include="Resources\DateTestObject.cs" />
     <Compile Include="Resources\Animal.cs" />
     <Compile Include="ServiceClientTests.cs" />
     <Compile Include="Tracing\CloudTracingExtensionsTest.cs" />
