4099032: Added support for "ProvisionState" field in generic resources

--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
@@ -30,7 +30,7 @@
     <Compile Include="CloudErrorJsonConverterTest.cs" />
     <Compile Include="ResourceJsonConverterTest.cs" />
     <Compile Include="Sample\RedisManagementClient.cs" />
-    <Compile Include="Sample\SampleResource2.cs" />
+    <Compile Include="Sample\GenericResource.cs" />
     <Compile Include="Sample\SampleResource.cs" />
     <Compile Include="TokenCloudCredentialsTest.cs" />
   </ItemGroup>
