Added support for recursive resource serialization

--- a/ClientRuntimes/CSharp/ClientRuntime/ClientRuntime.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime/ClientRuntime.csproj
@@ -20,6 +20,8 @@
     <Compile Include="HttpExtensions.cs" />
     <Compile Include="Serialization\PolymorphicDeserializeJsonConverter.cs" />
     <Compile Include="Serialization\DateJsonConverter.cs" />
+    <Compile Include="Serialization\PolymorphicJsonConverter.cs" />
+    <Compile Include="Serialization\JsonConverterHelper.cs" />
     <Compile Include="Serialization\PolymorphicSerializeJsonConverter.cs" />
     <Compile Include="Serialization\ReadOnlyJsonContractResolver.cs" />
     <Compile Include="TokenCredentials.cs" />
