nodejs azure client runtime

--- a/ClientRuntimes/NodeJS/ClientRuntime.Azure/package.json
+++ b/ClientRuntimes/NodeJS/ClientRuntime.Azure/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ms-rest",
+  "name": "ms-rest-azure",
   "author": {
     "name": "Microsoft Corporation",
     "email": "azsdkteam@microsoft.com",
     "url": "https://github.com/Azure/AutoRest"
   },
-  "version": "0.1.1",
-  "description": "Client Runtime for nodeJS client libraries generated using AutoRest",
-  "tags": ["node", "microsoft", "autorest", "clientruntime"],
-  "keywords": ["node", "microsoft", "autorest", "clientruntime"],
-  "main": "./lib/msRest.js",
+  "version": "0.1.0",
+  "description": "Client Runtime for nodeJS Azure client libraries generated using AutoRest",
+  "tags": ["node", "microsoft", "autorest", "azure", "clientruntime"],
+  "keywords": ["node", "microsoft", "autorest", "azure", "clientruntime"],
+  "main": "./lib/msRestAzure.js",
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -20,12 +20,8 @@
     }
   ],
   "dependencies": {
-    "underscore": "1.4.x",
-    "tunnel": "~0.0.2",
-    "request": "2.45.0",
-    "validator": "~3.1.0",
-    "duplexer": "~0.1.1",
-    "through": "~2.3.4"
+    "async": "0.2.7",
+    "ms-rest": "0.1.1"
   },
   "devDependencies": {
     "jshint": "2.6.3",
